# hipipe

./: .gitignore  .gitmodules  CMakeLists.txt  CNAME  COPYRIGHT.md  LICENSE.txt  README.md  _c_o_p_y_r_i_g_h_t_8md_source.html  _r_e_a_d_m_e_8md_source.html  base64_8cpp_source.html  base64_8hpp_source.html  batch_8cpp_source.html  batch_8hpp_source.html  batch__t_8hpp_source.html  buffer_8cpp_source.html  buffer_8hpp_source.html  classhipipe_1_1csv__istream__range-members.html  classhipipe_1_1csv__istream__range.html  classhipipe_1_1dataframe-members.html  classhipipe_1_1dataframe.html  classhipipe_1_1index__mapper-members.html  classhipipe_1_1index__mapper.html  classhipipe_1_1python_1_1range-members.html  classhipipe_1_1python_1_1range.html  classhipipe_1_1stream_1_1abstract__column-members.html  classhipipe_1_1stream_1_1abstract__column.html  classhipipe_1_1stream_1_1abstract__column__inherit__graph.map  classhipipe_1_1stream_1_1abstract__column__inherit__graph.md5  classhipipe_1_1stream_1_1batch-members.html  classhipipe_1_1stream_1_1batch.html  classhipipe_1_1stream_1_1column__base-members.html  classhipipe_1_1stream_1_1column__base.html  classhipipe_1_1stream_1_1column__base__coll__graph.map  classhipipe_1_1stream_1_1column__base__coll__graph.md5  classhipipe_1_1stream_1_1column__base__inherit__graph.md5  classhipipe_1_1thread__pool-members.html  classhipipe_1_1thread__pool.html  column_8hpp_source.html  column__t_8hpp_source.html  common_8hpp_source.html  (+262 more)
.circleci/: config.yml
LICENSES/: MIT_License.txt
cmake/: AddBoostTest.cmake  AddPythonTest.cmake  BuildPyBoostTestModule.cmake  CxtreamConfig.cmake.in  FindBoostPython3.cmake  FindPythonNumPy.cmake  HiPipeConfig.cmake.in  Uninstall.cmake  build_config.hpp.in
doc/: CMakeLists.txt  Doxyfile.in  DoxygenLayout.xml  clean-gh-pages.cmake  installation.md  mainpage.md  styles.css
include/cxtream/: core.hpp  python.hpp  tensorflow.hpp
include/cxtream/core/: base64.hpp  csv.hpp  dataframe.hpp  groups.hpp  index_mapper.hpp  stream.hpp  thread.hpp  utility.hpp
include/cxtream/core/stream/: batch.hpp  buffer.hpp  column.hpp  create.hpp  drop.hpp  filter.hpp  for_each.hpp  generate.hpp  pad.hpp  random_fill.hpp  template_arguments.hpp  transform.hpp  unpack.hpp
include/cxtream/core/utility/: filesystem.hpp  random.hpp  string.hpp  tuple.hpp  vector.hpp
include/cxtream/python/: initialize.hpp  range.hpp  stream.hpp  utility.hpp
include/cxtream/python/stream/: converter.hpp
include/cxtream/python/utility/: pyboost_column_converter.hpp  pyboost_cv_converter.hpp  pyboost_fs_path_converter.hpp  pyboost_is_registered.hpp  pyboost_ndarray_converter.hpp
include/cxtream/tensorflow/: load_graph.hpp  run_graph.hpp  utility.hpp
include/cxtream/tensorflow/utility/: to_tf_type.hpp
include/hipipe/: core.hpp  python.hpp  tensorflow.hpp
include/hipipe/core/: base64.hpp  csv.hpp  dataframe.hpp  groups.hpp  index_mapper.hpp  python.hpp  stream.hpp  thread.hpp  utility.hpp
include/hipipe/core/python/: initialize.hpp  range.hpp  stream.hpp  utility.hpp
include/hipipe/core/stream/: batch.hpp  batch_t.hpp  buffer.hpp  column.hpp  column_t.hpp  copy.hpp  create.hpp  drop.hpp  filter.hpp  for_each.hpp  generate.hpp  keep.hpp  pad.hpp  (+6 more)
include/hipipe/python/: initialize.hpp  range.hpp  stream.hpp  utility.hpp
include/hipipe/tensorflow/: load_graph.hpp  run_graph.hpp  utility.hpp
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  files_0.js  functions_0.js  functions_1.js  functions_10.js  functions_11.js  functions_12.js  functions_13.js  functions_14.js  functions_2.js  (+36 more)
src/core/: base64.cpp  csv.cpp  dataframe.cpp  placeholder.cpp
src/core/python/: initialize.cpp
src/core/utility/: filesystem.cpp
src/python/: initialize.cpp
src/python/utility/: pyboost_cv2_converter.cpp  pyboost_cv3_converter.cpp  pyboost_fs_path_converter.cpp
src/tensorflow/: load_graph.cpp
test/: CMakeLists.txt
test/core/: CMakeLists.txt  base64.cpp  common.hpp  csv.cpp  dataframe.cpp  groups.cpp  index_mapper.cpp  thread.cpp
test/core/python/: CMakeLists.txt  range.py  range.py.cpp
test/core/python/stream/: CMakeLists.txt  batch_t.py  batch_t.py.cpp  column_t.py  column_t.py.cpp  converter.py.cpp
test/core/python/utility/: CMakeLists.txt  ndim_vector_converter.py  ndim_vector_converter.py.cpp  pyboost_cv_converter.py.cpp  pyboost_cv_mat_converter.py  pyboost_cv_mat_converter.py.cpp  pyboost_cv_point_converter.py  pyboost_cv_point_converter.py.cpp  pyboost_fs_path_converter.py  pyboost_fs_path_converter.py.cpp  pyboost_is_registered.py  pyboost_is_registered.py.cpp  vector_converter.py
test/core/stream/: CMakeLists.txt  batch.cpp  batch_t.cpp  buffer.cpp  column_t.cpp  common.hpp  copy.cpp  create.cpp  drop.cpp  example.cpp  filter.hpp  filter1.cpp  filter2.cpp  for_each.cpp  generate.cpp  keep.cpp  pad.cpp  random_fill.cpp  rebatch.cpp  transform.hpp  transform1.cpp  transform2.cpp  transform3.cpp  transform4.cpp  transform5.cpp  unpack.cpp
test/core/utility/: CMakeLists.txt  filesystem.cpp  ndim.cpp  string.cpp  tuple.cpp  vector.cpp
test/python/: CMakeLists.txt  range.py.cpp
test/python/stream/: CMakeLists.txt  converter.py  converter.py.cpp
test/python/utility/: CMakeLists.txt  pyboost_column_converter.py  pyboost_column_converter.py.cpp  pyboost_cv_converter.py  pyboost_cv_converter.py.cpp  pyboost_fs_path_converter.py.cpp  pyboost_is_registered.py.cpp  pyboost_ndarray_converter.py  pyboost_ndarray_converter.py.cpp  pyboost_vector_converter.py  pyboost_vector_converter.py.cpp  vector_converter.py  vector_converter.py.cpp
test/tensorflow/: CMakeLists.txt  load_graph.cpp  run_graph.cpp
test/tensorflow/transpose_add_one_2_3_net/: transpose_add_one_2_3_net.pb  transpose_add_one_2_3_net.sh  transpose_add_one_net.py
(+29 files in other folders)
